# dispersive

./: .RData  .Rhistory  .bzrignore  .dir-locals.el  .gitignore  Makefile  PKG-INFO  SciTEDirectory.properties  _  app.bat  app.py  app_gtk.bat  app_gtk.py  configure.zcml  debug.py  default.el  global.R  icc_rake_app.sh  icc_xray_app.sh  install.bat  loader.py  overlap.R  prog.py  python.properties  rake.leo  requirements.txt  scaling.R  scite_session  setup.py  test.xrp
Bair/: .RData  .Rhistory  fit.R  fit11.R  fit6.R  fit8.R  fit9.R  rel_lines.csv  rel_lines_pr.csv  scaling.R
SPECPLUS/DATA/: lines.csv  lines.sqlite3
data/: EdxData1.csv  EdxData1.sqlite3  EdxData2.csv  IZK.7z  Reference.7z  Results_IZK.7z  lines.sqlite3  rel_lines.csv  rel_lines.ods  rel_lines.odt
data/Coumpton/: Compton-peak 23.03.12.rtx  Compton-peak-NC 23.03.12.rtx  G-2.spx  GA.spx  QLO-1.spx  test
data/NEW/: 0.01_Apatit_Sediments_18.07.13.rtx  Br_sediment_Moskow.rtx
data/Test/: 14SH3-12.spe  sns228-02.spx  sns228-02_spx-Acquisition 22.spe
data/line_xray/: load.py  sqxray.py  xray.py
doc/: README.md  README.txt
doc/.leo_shadow/: xREADME.txt
models/: component.py
other/: backend_gtk.py.diff
r-modules/fmin/: Fe3O4.csv  MNK.R  m.glade  minsearch.py  (+1 more)
src/: app.py  ui
src/gelemental/src/: Makefile.am  Makefile.in  buttons.cc  buttons.hh  elwidget.c  elwidget.cpp  elwidget.pyx  setup.py  table-table.cc  table-table.hh
ui/: Makefile  main_win.py  main_win.ui  main_win_gtk.glade  spectra.py  spectra.ui  spectra_ui.py
views/: __init__.py  component.py  configure.zcml  interface.py
(+101 files in other folders)
